further fix white space

--- a/src/components/Github/style.less
+++ b/src/components/Github/style.less
@@ -31,8 +31,7 @@
     border: 1px solid #DDD;
     border-radius: 3px;
     padding: 8px;
-    width: 100%;
-    display: flex;
+    cursor: pointer;
   }
 
   button {
